# Online-Store

./: .gitignore  catalog.json  groups.json  pyproject.toml  readme.md
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_name_alter_product_category_and_more.py  0003_product_status_published.py  0004_alter_product_status_published.py  0005_alter_product_options.py  0006_product_owner.py
catalog/templates/: base.html  category_list.html  category_products_list.html  contact.html  home.html  product_confirm_delete.html  product_form.html  products_list.html  single_display_product.html
catalog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  ds.html
catalog/templates/includes/: footer.html  menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_phone_number.py  0003_user_token.py  0004_alter_user_username.py
users/templates/: login.html
users/templates/users/: user_form.html
