[tool.poetry]
name = "jango"
version = "0.1.0"
description = ""
authors = ["f"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
black = "^25.9.0"
isort = "^7.0.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.1.1"
pillow = "^12.0.0"
psycopg2 = "^2.9.11"
ipython = "^9.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
